<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/nav_bar_height_long"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <!--<TextView-->
            <!--android:id="@+id/add_event_details_title"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:ellipsize="end"-->
            <!--android:gravity="top"-->
            <!--android:maxLines="3"-->
            <!--android:text="Add Event"-->
            <!--android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"-->
            <!--android:textColor="@android:color/white"-->
            <!--android:textSize="@dimen/text_size_large"/>-->

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="top"
                android:maxLines="3"
                android:theme="@style/TextInputField">

                <EditText
                    android:id="@+id/event_name_add_event"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="Enter event name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
                    android:textColor="@color/colorWhite"/>

            </android.support.design.widget.TextInputLayout>


        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_finished_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|top"
        android:layout_marginLeft="@dimen/fab_mini_margin"
        android:layout_marginTop="@dimen/fab_mini_margin_top"
        android:src="@drawable/ic_done_black_24dp"
        android:tint="@color/colorWhite"
        app:elevation="@dimen/fab_mini_elevation"
        app:fabSize="mini"/>


    <android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginBottom="@dimen/padding_between_text_view_in_details"
            android:layout_marginTop="@dimen/padding_between_text_view_in_details"
            android:choiceMode="singleChoice"
            android:divider="@android:color/transparent"
            android:dividerHeight="0dp"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="@dimen/padding_between_text_view_in_details"
                android:layout_marginRight="@dimen/padding_between_text_view_in_details"
                android:layout_marginTop="@dimen/padding_between_text_view_in_details">

                <EditText
                    android:id="@+id/event_location_add_event"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1.63"
                    android:background="@null"
                    android:drawableLeft="@drawable/ic_location_on_black_24dp"
                    android:hint="Location of Event"
                    android:textColor="@color/colorPrimaryText"/>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/LinearLayout02"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal"
                android:weightSum="1">

                <Spinner
                    android:id="@+id/type_of_event_add_event"
                    android:layout_width="@dimen/add_event_button_width"
                    android:layout_height="@dimen/add_event_button_height"
                    android:layout_marginLeft="@dimen/padding_between_text_view_in_details"
                    android:layout_marginRight="@dimen/padding_between_text_view_in_details"
                    android:layout_marginTop="@dimen/padding_between_text_view_in_details"
                    android:drawableLeft="@drawable/ic_access_time_black_24dp"
                    android:spinnerMode="dropdown"/>

                <Spinner
                    android:id="@+id/color_dropdown_add_event"
                    android:layout_width="@dimen/add_event_button_width"
                    android:layout_height="@dimen/add_event_button_height"
                    android:layout_marginLeft="@dimen/padding_between_text_view_in_details"
                    android:layout_marginRight="@dimen/padding_between_text_view_in_details"
                    android:layout_marginTop="@dimen/padding_between_text_view_in_details"
                    android:layout_weight="1.44"
                    android:drawableLeft="@drawable/ic_access_time_black_24dp"
                    android:spinnerMode="dropdown"/>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/event_duration_frame_add_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="@dimen/padding_between_text_view_in_details"
                android:layout_marginRight="@dimen/padding_between_text_view_in_details"
                android:layout_marginTop="@dimen/padding_between_text_view_in_details">

                <EditText
                    android:id="@+id/event_duration_add_event"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1.63"
                    android:background="@null"
                    android:drawableLeft="@drawable/ic_edit_black_24dp"
                    android:fontFamily="sans-serif"
                    android:hint="Enter event duration in hours"
                    android:digits="0123456789"
                    android:textColor="@color/colorPrimaryText"/>
            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:id="@+id/LinearLayout03"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/padding_between_text_view_in_details"
                android:orientation="horizontal"
                android:weightSum="1">

                <Button
                    android:id="@+id/start_date_add_event"
                    android:layout_width="@dimen/add_event_button_width"
                    android:layout_height="@dimen/add_event_button_height"
                    android:layout_marginLeft="@dimen/padding_between_text_view_in_details"
                    android:layout_marginRight="@dimen/padding_between_text_view_in_details"
                    android:layout_marginTop="@dimen/padding_between_text_view_in_details"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="left|center_vertical"
                    android:onClick="setStartDate"
                    android:text="Set Start Date"
                    android:textColor="@color/colorPrimaryText"/>

                <Button
                    android:id="@+id/start_time_add_event"
                    android:layout_width="@dimen/add_event_button_width"
                    android:layout_height="@dimen/add_event_button_height"
                    android:layout_marginLeft="@dimen/padding_between_text_view_in_details"
                    android:layout_marginRight="@dimen/padding_between_text_view_in_details"
                    android:layout_marginTop="@dimen/padding_between_text_view_in_details"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="left|center_vertical"
                    android:onClick="setStartTime"
                    android:text="Set Start Time"
                    android:textColor="@color/colorPrimaryText"/>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/LinearLayout04"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/padding_between_text_view_in_details"
                android:orientation="horizontal"
                android:weightSum="1">

                <Button
                    android:id="@+id/end_date_add_event"
                    android:layout_width="@dimen/add_event_button_width"
                    android:layout_height="@dimen/add_event_button_height"
                    android:layout_marginLeft="@dimen/padding_between_text_view_in_details"
                    android:layout_marginRight="@dimen/padding_between_text_view_in_details"
                    android:layout_marginTop="@dimen/padding_between_text_view_in_details"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="left|center_vertical"
                    android:onClick="setEndDate"
                    android:text="Set End Date"
                    android:textColor="@color/colorPrimaryText"/>


                <Button
                    android:id="@+id/end_time_add_event"
                    android:layout_width="@dimen/add_event_button_width"
                    android:layout_height="@dimen/add_event_button_height"
                    android:layout_marginLeft="@dimen/padding_between_text_view_in_details"
                    android:layout_marginRight="@dimen/padding_between_text_view_in_details"
                    android:layout_marginTop="@dimen/padding_between_text_view_in_details"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="left|center_vertical"
                    android:onClick="setEndTime"
                    android:text="Set End Time"
                    android:textColor="@color/colorPrimaryText"/>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_between_text_view_in_details"
                android:layout_marginLeft="@dimen/padding_between_text_view_in_details"
                android:layout_marginRight="@dimen/padding_between_text_view_in_details"
                android:layout_marginTop="@dimen/padding_between_text_view_in_details">

                <EditText
                    android:id="@+id/notes_add_event"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawableLeft="@drawable/ic_short_text_black_24dp"
                    android:hint="Notes"
                    android:textColor="@color/colorPrimaryText"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_between_text_view_in_details"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>
